NM-3514-make-liquid-sanitize-texts-by-default
* made liquid sanitize texts by default

--- a/app/views/data_upload_mailer/notify_uploader_of_failed_import.html.liquid
+++ b/app/views/data_upload_mailer/notify_uploader_of_failed_import.html.liquid
@@ -6,7 +6,7 @@
 {% if data_upload.parsing_result_log %}
   <p>
     Encountered validation errors log:
-    {{ data_upload.parsing_result_log_html }}
+    {{ data_upload.parsing_result_log_html | make_html_safe }}
   </p>
 {% endif %}
 
