--- a/app/views/data_upload_mailer/notify_uploader_of_finished_import.html.liquid
+++ b/app/views/data_upload_mailer/notify_uploader_of_finished_import.html.liquid
@@ -13,7 +13,7 @@ Deleted entities: {{ data_upload.deleted_parse_summary }}
 <p>
 {% if data_upload.parsing_result_log %}
   Encountered validation errors log:
-  {{ data_upload.parsing_result_log_html }}
+  {{ data_upload.parsing_result_log_html | make_html_safe }}
 {% endif %}
 </p>
 
