NM-3521A add html safe to one more place

--- a/app/new_ui_views/layouts/_theme_dashboard_header.html.liquid
+++ b/app/new_ui_views/layouts/_theme_dashboard_header.html.liquid
@@ -9,7 +9,7 @@
         </div>
 
         {% if no_header_links == false %}
-            {{ navigation_links }}
+            {{ navigation_links | make_html_safe }}
         {% endif %}
     </div>
 </nav>
