--- a/app/views/dashboard/user_reservations/_reservation.html.haml
+++ b/app/views/dashboard/user_reservations/_reservation.html.haml
@@ -37,7 +37,7 @@
       %h3= t("reservations.states.#{reservation.state}")
       - if reservation.state == 'unconfirmed'
         %p
-          #{t('dashboard.user_reservations.pending_confirmation')} <strong>#{reservation.time_to_expiry(reservation.expiry_time)}</strong>.
+          #{t('dashboard.user_reservations.pending_confirmation')} <strong>#{reservation.time_to_expiry(reservation.expire_at)}</strong>.
         %p
           - if reservation.active_merchant_payment?
             - if reservation.billing_authorization.present?
