--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -60,7 +60,7 @@
               <h3 class="hx">
                 <a href="{{ user.profile_path }}">{{ user.name }}</a>
               </h3>
-              <p>{{ user.properties.about_me }}</p>
+              <p>{{ user.properties.short_bio }}</p>
               <p class="location">{{ user.display_location }}</p>
             </article>
           </div>
