--- a/app/community_views/instance_admin/projects/projects/_index_row.html.haml
+++ b/app/community_views/instance_admin/projects/projects/_index_row.html.haml
@@ -2,9 +2,8 @@
   %td= link_to resource.name, project_path(resource)
   %td= resource.featured? ? 'Yes' : 'No'
   %td= resource.created_at.strftime("%b %-d, %Y")
-  %td= link_to t('general.edit'), edit_instance_admin_projects_project_path(resource)
-  %td
-    - if resource.deleted?
-      = link_to "Restore", restore_instance_admin_projects_project_path(resource), method: :post, data: { confirm: 'Are you sure you want to restore this?' }
-    - else
-      = link_to "Delete", instance_admin_projects_project_path(resource), method: :delete, data: { confirm: 'Are you sure you want to delete this?' }
+  - if resource.deleted?
+    %td= link_to "Restore", restore_instance_admin_projects_project_path(resource), method: :post, data: { confirm: 'Are you sure you want to restore this?' }
+  - else
+    %td= link_to t('general.edit'), edit_instance_admin_projects_project_path(resource)
+    %td= link_to t('general.delete'), instance_admin_projects_project_path(resource), method: :delete, data: { confirm: 'Are you sure you want to delete this?' }
