--- a/app/community_views/shared/_person.html.haml
+++ b/app/community_views/shared/_person.html.haml
@@ -19,6 +19,7 @@
         %span= user.followers_count
     %p.action{:'data-follow-button' => true}
       = render partial: "shared/follow_button", locals: { object: user, css_class: "tiny" }
-    %h3.hx= user.decorate.name_with_affiliation
+    %h3.hx
+      = link_to user.decorate.name_with_affiliation, user_path(user)
     %p= user.properties.try(:short_bio)
     = user.decorate.display_address
