--- a/app/community_views/shared/_featured_user.html.haml
+++ b/app/community_views/shared/_featured_user.html.haml
@@ -5,6 +5,6 @@
   %p.action{:'data-follow-button' => true}
     = render partial: "shared/follow_button", locals: { object: user, css_class: "tiny" }
   %h3.hx
-    = link_to user.name, user_path(user)
+    = link_to user.decorate.name_with_affiliation, user_path(user)
   %p= user.properties.try(:short_bio)
   %p.location= "#{user.current_address.try(:city)}, #{user.current_address.try(:state)}"
