IDM-78 fix on the homepage

--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -58,7 +58,7 @@
               <a href="/auth/saml" class='button-a tiny'>{{ 'activity_feed.verbs.follow' | translate }}</a>
               </p>
               <h3 class="hx">
-                <a href="{{ user.profile_path }}">{{ user.name }}</a>
+                <a href="{{ user.profile_path }}">{{ user.name_with_affiliation }}</a>
               </h3>
               <p>{{ user.properties.short_bio }}</p>
               <p class="location">{{ user.display_location }}</p>
