--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -24,7 +24,7 @@
               <h3 class="hx">
                 <a href="{{ project.show_path}}">{{ project.name }}</a>
               </h3>
-              <p class="user"><a href="{{ project.creator.profile_path}}"><img src="{{ project.creator.avatar_url_thumb }}" width="30" height="30" />{{ project.creator.name }}</a></p>
+              <p class="user"><a href="{{ project.creator.profile_path}}"><img src="{{ project.creator.avatar_url_thumb }}" width="30" height="30" />{{ project.creator.name_with_affiliation }}</a></p>
               <p>{{ project.summary }}</p>
             </article>
           </div>
