--- a/app/community_views/shared/_featured_project.html.haml
+++ b/app/community_views/shared/_featured_project.html.haml
@@ -9,5 +9,5 @@
   %p.user
     = link_to user_path(project.creator) do
       = image_tag project.creator.avatar.url(:thumb), width: 30, height: 30
-      = project.creator.name
+      = project.creator.decorate.name_with_affiliation
   %p= custom_sanitze project.description.truncate(100)
