--- a/app/community_views/onboarding/followings.html.haml
+++ b/app/community_views/onboarding/followings.html.haml
@@ -22,7 +22,7 @@
                   = f.input "people][", as: :boolean, checked_value: person.id, input_html: { checked: "checked", class: 'tick-a', id: "follow-person-#{person.id}" }, wrapper_html: { class: 'check' }, wrapper: :inline_checkbox, label_html: { id: "follow-person-#{person.id}", class: 'no-label' }
 
                   %h3.hx
-                    = link_to person.name, user_path(person)
+                    = link_to person.decorate.name_with_affiliation, user_path(person)
                   %p= person.properties.about_me rescue ""
                   %p.location= "#{person.current_address.city}, #{person.current_address.state}" rescue ""
 
