NM-3527-fa-icon-should-submit-form
* fa-icon form submitting icons should submit form

--- a/app/community_views/instance_admin/projects/projects/index.html.haml
+++ b/app/community_views/instance_admin/projects/projects/index.html.haml
@@ -39,7 +39,7 @@
           .filter.search
             %input{placeholder: t('instance_admin.manage.admin_searchable.search_by_keyword'), type: 'text', name: 'q', value: params[:q]}
             %input{type: 'submit', name: 'commit', value:'submit', class: 'hidden_form_element2'}
-            =fa_icon "search"
+            =fa_icon "search", class: 'fa-action-icon-submit'
 
   .row
     .table-container.col-xs-12
