--- a/app/views/instance_admin/reports/listings/index.html.haml
+++ b/app/views/instance_admin/reports/listings/index.html.haml
@@ -27,7 +27,7 @@
           .filter.search
             %input{placeholder: t('instance_admin.manage.admin_searchable.search_by_keyword'), type: 'text', name: 'q', value: params[:q]}
             %input{type: 'submit', name: 'commit', value:'submit', class: 'hidden_form_element2'}
-            =fa_icon "search"
+            =fa_icon "search", class: 'fa-action-icon-submit'
 
           .filter.download-export
             = link_to t('instance_admin.reports.download_report_as_csv'), '', data: { 'download-report' => 1, 'report-url' => download_report_instance_admin_reports_listings_path(format: 'csv') }
