NM-3471 remove link appears after saving location via modal

--- a/app/new_ui_views/dashboard/company/locations/_form.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_form.html.haml
@@ -10,6 +10,7 @@
 
     = render 'dashboard/shared/flash'
 
+    %input{name: 'with_deleted_link', type: 'hidden', value: params[:with_deleted_link]}
     = render :partial => 'location_form', :locals => { :f => f, :location => @location }
 
   .dialog__actions
