--- a/app/new_ui_views/dashboard/company/locations/_location.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_location.html.haml
@@ -1,8 +1,9 @@
 - is_hidden = defined?(f) && f.object.location_id != location.id
+- with_deleted_link = params[:controller] == 'dashboard/company/locations' ? ActiveRecord::Type::Boolean.new.type_cast_from_database(params[:with_deleted_link]) : !defined?(f) || f.object.location_id != location.id
 %span{data: { "location-id" => location.id, availability: pretty_availability_sentence(location.availability).to_s }, hidden: defined?(f) ? is_hidden : false }
   |
-  = link_to t('dashboard.location.edit'), edit_dashboard_company_location_path(location, should_check_address: @transactable_type.try(:rental_shipping)), data: { modal: true }
-  - if !defined?(f) || f.object.location_id != location.id
+  = link_to t('dashboard.location.edit'), edit_dashboard_company_location_path(location, with_deleted_link: with_deleted_link, should_check_address: @transactable_type.try(:rental_shipping)), data: { modal: true }
+  - if with_deleted_link
     |
     = link_to t('dashboard.location.remove'), dashboard_company_location_path(location), remote: true, method: :delete,
         data: { confirm: location.listings.count > 0 ? I18n.t('dashboard.location.are_you_sure', listings_count: location.listings.count) : I18n.t('confirmations.are_you_sure') }
