NM-3373i upsell qa fixes part 2

--- a/app/views/locations/_additional_charges.html.haml
+++ b/app/views/locations/_additional_charges.html.haml
@@ -1,16 +1,17 @@
-.additional-charges{id: "additional-charges-#{listing.id}", :'data-additional-charges' => true}
-  %h4=  t('dashboard.user_reservations.additional_charges')
-  - listing.all_additional_charge_types.each do |ac|
-    - if ac.mandatory?
-      .mandatory-charge{ data: { 'mandatory-charge' => ac.amount } }
-        %span
-          = ac.name
-        .pull-right= number_to_currency_symbol(listing.currency, content_tag(:span, ac.amount))
-        %br
-    - else
-      .optional-charge{ data: { 'optional-charge' => ac.amount } }
-        %span
-          = check_box_tag "reservation_request[additional_charge_ids][]", ac.id, false, data: { 'optional-charge-select' => '' }
-          = ac.name
-        %span.pull-right= number_to_currency_symbol(listing.currency, content_tag(:span, ac.amount))
-        %br
+- if listing.all_additional_charge_types.any?
+  .additional-charges{id: "additional-charges-#{listing.id}", :'data-additional-charges' => true}
+    %h4=  t('dashboard.user_reservations.additional_charges')
+    - listing.all_additional_charge_types.each do |ac|
+      - if ac.mandatory?
+        .mandatory-charge{ data: { 'mandatory-charge' => ac.amount } }
+          %span
+            = ac.name
+          .pull-right= number_to_currency_symbol(listing.currency, content_tag(:span, ac.amount))
+          %br
+      - else
+        .optional-charge{ data: { 'optional-charge' => ac.amount } }
+          %span
+            = check_box_tag "reservation_request[additional_charge_ids][]", ac.id, false, data: { 'optional-charge-select' => '' }
+            = ac.name
+          %span.pull-right= number_to_currency_symbol(listing.currency, content_tag(:span, ac.amount))
+          %br
