--- a/app/assets/stylesheets/new_ui/_header.scss
+++ b/app/assets/stylesheets/new_ui/_header.scss
@@ -54,7 +54,7 @@ $navbar-padding-vertical-desktop: (($navbar-desktop-height - $line-height-comput
         margin-right: -$navbar-padding-horizontal;
     }
 
-    @media (max-width: $grid-float-breakpoint) {
+    @media (max-width: $grid-float-breakpoint - 1px) {
         .navbar-nav .open .dropdown-menu {
             right: 0;
             left: auto;
