--- a/app/new_ui_views/dashboard/company/orders_received/show.html.haml
+++ b/app/new_ui_views/dashboard/company/orders_received/show.html.haml
@@ -61,8 +61,15 @@
 
                 %p= link_to t("buy_sell_market.checkout.labels.payments.details"), dashboard_company_orders_received_payment_path(@order.number, payment), class: "btn btn-primary"
 
-              - if @order.near_me_payments.blank?
-                = link_to 'Capture', dashboard_company_orders_received_payments_path(@order.number), method: :post, data: { confirm: 'Are you sure you want to capture payment for this order?' }, class: 'btn btn-primary'
+              - if @order.paid?
+                %span.label.label-info
+                  = t('buy_sell_market.checkout.labels.payments.paid')
+              - else
+                - if @order.near_me_payments.blank?
+                  - if @order.manual_payment?
+                    = link_to 'Mark As Paid', dashboard_company_orders_received_payments_path(@order.number), method: :post, data: { confirm: 'Are you sure you want to mark this order as paid?' }, class: 'btn btn-primary'
+                  - else
+                    = link_to 'Capture', dashboard_company_orders_received_payments_path(@order.number), method: :post, data: { confirm: 'Are you sure you want to capture payment for this order?' }, class: 'btn btn-primary'
 
         %h2= t("buy_sell_market.checkout.labels.shipping")
         - @order.shipments.each do |shipment|
