--- a/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
@@ -6,7 +6,6 @@
         %h2
           - if reservation.owner.present?
             = link_to reservation.owner, profile_path(reservation.owner.slug)
-            = link_to '', new_reservation_user_message_path(reservation), data: { modal: true }, class: 'contact-owner'
           - else
             = "#{reservation.owner_including_deleted} (Deleted)"
 
@@ -15,6 +14,12 @@
           - listing_name = reservation.listing.try(:name)
           - listing_name = t('dashboard.host_reservations.show_listing_page') if listing_name.blank?
           = link_to listing_name, location_path(reservation.listing.location, reservation.listing)
+
+        - if reservation.owner.present?
+          %p
+            = link_to new_reservation_user_message_path(reservation), data: { modal: true } do
+              %span.fa.fa-envelope-o
+              = t('dashboard.host_reservations.contact_subscriber', name: reservation.owner)
 
       - else
         %h2= t('dashboard.host_reservations.listing_deleted')
