--- a/app/views/home/_search_box_inputs.html.liquid
+++ b/app/views/home/_search_box_inputs.html.liquid
@@ -38,7 +38,7 @@
         <div class="span10">
           <div class="search-transactable--radio">
             {% for transactable_type in transactable_types %}
-            <label for="transactable-type-{{ transactable_type.id }}"><input type="radio" name="transactable_type_id" value="{{ transactable_type.id }}" id="transactable-type-{{ transactable_type.id }}" {% if forloop.first == true %} checked {% endif %} data-transactable-type-picker > {{ transactable_type.name}}</label>
+            <label for="transactable-type-{{ transactable_type.id }}"><input type="radio" name="transactable_type_selector" value="{{ transactable_type.select_id }}" {% if forloop.first == true %} checked {% endif %} data-transactable-type-picker > {{ transactable_type.name}}</label>
             {% endfor %}
           </div>
         </div>
