--- a/app/assets/stylesheets/sections/_home.scss
+++ b/app/assets/stylesheets/sections/_home.scss
@@ -40,6 +40,10 @@ section.home {
         font:400 24px $font-regular, sans-serif;
         line-height: 36px;
         @include text-shadow(black 0 0 1px, black 0 0 1px, black 0 0 1px, black 0 0 1px, black 0 0 1px);
+
+        span.ico-chevron-down {
+          cursor: pointer;
+        }
       }
     }
 
