--- a/app/views/search/_meta_tags.html.haml
+++ b/app/views/search/_meta_tags.html.haml
@@ -1,2 +1,3 @@
 - title meta_title_for_search(platform_context, @searcher.search)
 - meta_description meta_description_for_search(platform_context, @searcher.search)
+- canonical_prev_next @searcher.try(:results)
