--- a/app/views/buy_sell_market/checkout/_summary.html.haml
+++ b/app/views/buy_sell_market/checkout/_summary.html.haml
@@ -42,7 +42,7 @@
       - unless @order.tax_amount.zero?
         %tr
           %td= t 'buy_sell_market.checkout.labels.tax'
-          %td= humanized_money_with_cents_and_symbol @order.monetize(@order.tax_amount)
+          %td= humanized_money_with_cents_and_symbol @order.tax_amount
       %tr
         %td= t 'buy_sell_market.checkout.labels.service_fee'
         %td
