NM-3609-lack-of-the-input-field-for-input-pricing
* changes to Bookings.Controller: only if !isPerUnitBooking do we
turn the element into a custom select (otherwise it's an input),
also we treat in other places the element as if it's a select only
if it is
* changes to _booking_module_listing_description_above_call_to_action.html.liquid:
we check that the listing is schedule booking as only then I understand
the option price_per_unit has sense

--- a/app/views/locations/_booking_module_listing_description_above_call_to_action.html.liquid
+++ b/app/views/locations/_booking_module_listing_description_above_call_to_action.html.liquid
@@ -16,7 +16,7 @@
     <input type="text" data-guest-notes="true">
   </div>
 {% endif %}
-{% if listing.price_per_unit? %}
+{% if listing.schedule_booking? and listing.price_per_unit? %}
   <div class="number-of-units">
     <span>
       {{ 'reservations.booking_module.number_of_units' | translate }}
