--- a/app/new_ui_views/dashboard/user_requests_for_quotes/show.html.haml
+++ b/app/new_ui_views/dashboard/user_requests_for_quotes/show.html.haml
@@ -20,18 +20,20 @@
     %h2
       - if @ticket.target.present?
         - if @ticket.reservation_details && @ticket.reservation_details['quantity'].present?
-          = t('reservations.quantity')
           = @ticket.reservation_details['quantity']
 
         - if @ticket.target.try(:schedule_booking?) && @ticket.reservation_date.present?
-          = "&times; #{l(@ticket.reservation_date, format: :long)}"
+          &times;
+          = l(@ticket.reservation_date, format: :long)
         - elsif @ticket.reservation_dates.any?
           - if @ticket.reservation_details['start_minute'].present? && @ticket.reservation_details['end_minute'].present?
             - @hourly_presenter = HourlyPresenter.new(@ticket.reservation_dates.first, @ticket.reservation_details['start_minute'].to_i, @ticket.reservation_details['end_minute'].to_i)
-            = " &times; #{I18n.l(@ticket.reservation_dates.first, format: :long)} #{@hourly_presenter.hours} #{'hour'.pluralize(@hourly_presenter.hours.to_i)}"
+            &times;
+            = "#{I18n.l(@ticket.reservation_dates.first, format: :long)} #{@hourly_presenter.hours} #{'hour'.pluralize(@hourly_presenter.hours.to_i)}"
           - else
             - @date_presenter = DatePresenter.new(@ticket.reservation_dates)
-            = " &times; #{@date_presenter.days_in_words}"
+            &times;
+            = @date_presenter.days_in_words
 
         = link_to @ticket.target.name, @ticket.show_target_path
       - else
