NM-3670 styles for google sign in button

--- a/app/assets/stylesheets/globals/_variables.scss
+++ b/app/assets/stylesheets/globals/_variables.scss
@@ -59,6 +59,7 @@ $twitter-blue: #33CCFF;
 $facebook-blue: #3B5998;
 $linkedin-blue: #4875B4;
 $instagram-brown: #905f4c;
+$google-red: #DC4E41;
 
 $link-color: $theme_blue;
 $link_hover: darken($theme_blue, 10%);
