--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,14 +1,14 @@
 @import "compass/typography/vertical_rhythm";
 @import "compass/css3/font-face";
 
-@include font-face('Futura-regular', 
+@include font-face('Futura-regular',
   font-files(
     'futura-regular-web.woff', woff,
     'futura-regular-web.ttf', ttf,
     'futura-regular-web.svg', svg),
     'futura-regular-web.eot');
 
-@include font-face('Futura-medium', 
+@include font-face('Futura-medium',
   font-files(
     'futura-medium-web.woff', woff,
     'futura-medium-web.ttf', ttf,
@@ -36,7 +36,7 @@
   @extend .ico-close;
 }
 
-// Icon Font Styling 
+// Icon Font Styling
 
 span.padding:before {
   padding-right: .4em;
@@ -61,57 +61,57 @@ span.padding-left {
 }
 
 
-.ico-filter:before, 
-.ico-calender-start:before, 
-.ico-calender-end:before, 
-.ico-user:before, 
-.ico-plus:before, 
-.ico-info:before, 
-.ico-facebook:before, 
-.ico-check:before, 
-.ico-bookings:before, 
-.ico-arrow-up:before, 
-.ico-arrow-right:before, 
-.ico-arrow-left:before, 
-.ico-arrow-down:before, 
-.ico-twitter:before, 
-.ico-sign-up:before, 
-.ico-search:before, 
-.ico-phone:before, 
-.ico-marker:before, 
-.ico-mail:before, 
-.ico-logout:before, 
-.ico-login:before, 
-.ico-lock:before, 
-.ico-location:before, 
-.ico-linkedin:before, 
-.ico-instagram:before, 
-.ico-edit:before, 
-.ico-drawer:before, 
-.ico-dashboard:before, 
-.ico-crosshairs:before, 
-.ico-close:before, 
-.ico-clock:before, 
-.ico-calender:before, 
-.ico-add-location:before, 
-.ico-manage-guests:before, 
-.ico-link:before, 
-.ico-app-store:before, 
-.ico-credit-card:before, 
-.ico-trash:before, 
-.ico-settings:before, 
-.ico-upload-photos:before, 
-.ico-desk:before, 
-.ico-add-desk:before, 
-.ico-save:before, 
-.ico-trash-open:before, 
-.ico-profile:before, 
-.ico-warning:before, 
-.ico-chevron-up:before, 
-.ico-chevron-right:before, 
-.ico-chevron-down:before, 
-.ico-chevron-left:before, 
-.ico-list:before, 
+.ico-filter:before,
+.ico-calender-start:before,
+.ico-calender-end:before,
+.ico-user:before,
+.ico-plus:before,
+.ico-info:before,
+.ico-facebook:before,
+.ico-check:before,
+.ico-bookings:before,
+.ico-arrow-up:before,
+.ico-arrow-right:before,
+.ico-arrow-left:before,
+.ico-arrow-down:before,
+.ico-twitter:before,
+.ico-sign-up:before,
+.ico-search:before,
+.ico-phone:before,
+.ico-marker:before,
+.ico-mail:before,
+.ico-logout:before,
+.ico-login:before,
+.ico-lock:before,
+.ico-location:before,
+.ico-linkedin:before,
+.ico-instagram:before,
+.ico-edit:before,
+.ico-drawer:before,
+.ico-dashboard:before,
+.ico-crosshairs:before,
+.ico-close:before,
+.ico-clock:before,
+.ico-calender:before,
+.ico-add-location:before,
+.ico-manage-guests:before,
+.ico-link:before,
+.ico-app-store:before,
+.ico-credit-card:before,
+.ico-trash:before,
+.ico-settings:before,
+.ico-upload-photos:before,
+.ico-desk:before,
+.ico-add-desk:before,
+.ico-save:before,
+.ico-trash-open:before,
+.ico-profile:before,
+.ico-warning:before,
+.ico-chevron-up:before,
+.ico-chevron-right:before,
+.ico-chevron-down:before,
+.ico-chevron-left:before,
+.ico-list:before,
 .ico-open-link:before,
 .ico-rss:before,
 .ico-facebook-full:before,
@@ -128,6 +128,7 @@ span.padding-left {
 .ico-blog:before,
 .ico-bullet:before,
 .ico-linkedin-other:before,
+.ico-google:before,
 .ico-google-plus-other:before {
   font-family: 'icon-font' !important;
   font-weight: normal;
@@ -337,6 +338,9 @@ span.padding-left {
   content: "\63";
 }
 .ico-google-plus-other:before {
+  content: "\64";
+}
+.ico-google:before {
   content: "\64";
 }
 .ico-linkedin-other:before {
