NM-3472 remove current location

--- a/app/views/registrations/_attributes.html.haml
+++ b/app/views/registrations/_attributes.html.haml
@@ -18,7 +18,11 @@
 = f.input :time_zone if only_inputs.empty? || only_inputs.include?(:time_zone)
 
 = render :partial => 'registrations/phone_fields', :locals => { :f => f, :country => country } if only_inputs.empty? || only_inputs.include?(:phone)
-= f.input :current_location, label: "Current location", as: :string if only_inputs.empty? || only_inputs.include?(:current_location)
+
+- if only_inputs.empty? || only_inputs.include?(:current_address)
+  = f.simple_fields_for :current_address, (f.object.current_address || f.object.build_current_address) do |address_form|
+    = render :partial => 'addresses/column_form', :locals => { :f => address_form }
+
 = f.input :company_name, label: "Company name", as: :string if only_inputs.empty? || only_inputs.include?(:company_name)
 = f.association :industries, :blank => false, :input_html => { :class => 'custom-select' } if only_inputs.empty? || only_inputs.include?(:industries)
 = f.input :password, :label => (f.object.persisted? ? "Change password" : "Password" ) if only_inputs.empty? || only_inputs.include?(:password)
