--- a/app/new_ui_views/layouts/dashboard.html.haml
+++ b/app/new_ui_views/layouts/dashboard.html.haml
@@ -65,7 +65,7 @@
 
       = yield
 
-    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"
+    = javascript_include_tag "//maps.googleapis.com/maps/api/js?libraries=places"
     = javascript_include_tag :new_ui
     = render 'layouts/initializers'
 
