--- a/app/new_ui_views/registrations/_form.html.haml
+++ b/app/new_ui_views/registrations/_form.html.haml
@@ -1,4 +1,4 @@
-= dashboard_simple_form_for resource, :as => resource_name, :url => url, :html => { class: "form-expandable" } do |f|
+= dashboard_simple_form_for resource, :as => resource_name, :url => url, :html => { class: "form-expandable", :"data-includes-address-field" => true } do |f|
 
   .panel
     .panel-body
