NM-1027 Datepickers will now correct cursor on :hover

--- a/app/assets/stylesheets/components/_booking_module.scss
+++ b/app/assets/stylesheets/components/_booking_module.scss
@@ -266,6 +266,7 @@
       height: 50px;
       padding-left: 10px;
       white-space: nowrap;
+      cursor: pointer;
 
       &.date-end,
       &.time-picker {
