NM-3646 Asterisk decoration has been removed in Firefox

--- a/app/assets/stylesheets/instance_admin/style.css.scss
+++ b/app/assets/stylesheets/instance_admin/style.css.scss
@@ -1483,6 +1483,7 @@ th.actions-2 {
 abbr[title] {
   border-bottom: 0 none;
   cursor: default;
+  text-decoration: none;
 }
 
 i.fa-action-icon-submit {
