NM-3591 routing error fix

--- a/app/new_ui_views/dashboard/company/transactables/edit.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/edit.html.haml
@@ -5,7 +5,7 @@
     = t("dashboard.transactables.edit")
 
   .options
-    - if @transactable.persisted?
+    - if @transactable.persisted? && @transactable.location.try(:persisted?)
       = link_to t('dashboard.transactables.view_html'), transactable_type_location_listing_path(@transactable_type, @transactable.location, @transactable), rel: :external
 
 
