--- a/app/community_views/instance_admin/layout/_nav.html.haml
+++ b/app/community_views/instance_admin/layout/_nav.html.haml
@@ -15,7 +15,7 @@
           - InstanceAdmin::BaseController::ANALYTICS_CONTROLLERS.each do |controller_name, settings|
             - next if %(overview).include?(controller_name)
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/analytics/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/analytics/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
     - if @authorizer.authorized?('Reports')
@@ -27,7 +27,7 @@
         %ul#reports-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::Reports")}
           - InstanceAdmin::BaseController::COMMUNITY_REPORTS_CONTROLLERS.each do |controller_name, settings|
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/reports/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/reports/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
 
@@ -40,7 +40,7 @@
           - InstanceAdmin::BaseController::SETTINGS_CONTROLLERS.each do |controller_name, settings|
             - next if %(hidden_controls locations listings documents_upload seller_attachments).include?(controller_name)
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/settings/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/settings/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
 
@@ -53,7 +53,7 @@
           - InstanceAdmin::BaseController::THEME_CONTROLLERS.each do |controller_name, settings|
             - next if ['info', 'liquid views', 'homepage', 'homepage content', 'header', 'footer', 'content_holders'].include?(controller_name)
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/theme/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/theme/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
 
@@ -66,7 +66,7 @@
           - InstanceAdmin::BaseController::MANAGE_CONTROLLERS.each do |controller_name, settings|
             - next unless ['users', 'admins', 'support', 'email layouts', 'emails', 'smses', 'workflows', 'user_profiles', 'categories'].include?(controller_name)
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/manage/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/manage/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= settings[:title] || controller_name.titleize
 
 
@@ -78,7 +78,7 @@
         %ul#blog-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::ManageBlog")}
           - InstanceAdmin::BaseController::MANAGE_BLOG_CONTROLLERS.each do |controller_name, settings|
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/manage_blog/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/manage_blog/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
 
@@ -90,7 +90,7 @@
         %ul#buy-sell-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::BuySell")}
           - InstanceAdmin::BaseController::BUY_SELL_CONTROLLERS.each do |controller_name, settings|
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/buy_sell/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/buy_sell/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
     - if @authorizer.authorized?('ShippingOptions') && false
@@ -101,7 +101,7 @@
         %ul#shipping-options-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::ShippingOptions")}
           - InstanceAdmin::BaseController::SHIPPING_OPTIONS_CONTROLLERS.each do |controller_name, settings|
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/shipping_options/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/shipping_options/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
 
     - if @authorizer.authorized?('Projects') && current_instance.is_community?
@@ -112,5 +112,5 @@
         %ul#projects-sub.sub-nav.collapse{:class => ("in" if controller.class.to_s.split("::").first(2).join("::") == "InstanceAdmin::Projects")}
           - InstanceAdmin::BaseController::PROJECTS_CONTROLLERS.each do |controller_name, settings|
             %li
-              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/projects/" + controller_name), action: settings[:default_action]}", :class => ("active" if controller.controller_name == (settings[:controller] || controller_name).split('/').last)}
+              %a{href: "#{url_for controller: settings.fetch(:controller, "/instance_admin/projects/" + controller_name), action: settings[:default_action]}", :class => is_active_instance_admin_nav_link(controller_name, settings)}
                 %span= "#{controller_name.titleize}"
